--- a/setup.cfg
+++ b/setup.cfg
@@ -2,5 +2,5 @@
 universal = 1
 
 [pycodestyle]
-exclude=.svn,CVS,.bzr,.hg,.git,__pycache__,.tox,docs/conf.py,py27,py34,py35,py36,py37,py38,py39,py310
+exclude=.svn,CVS,.bzr,.hg,.git,__pycache__,.tox,docs/conf.py,py27,py34,py35,py36,py37,py38,py39,py310,py11
 max-line-length=120
